# chathub

./: README.md  pyproject.toml
services/ai_service/: pyproject.toml
services/ai_service/app/: main.py
services/ai_service/app/db/: session.py
services/ai_service/app/models/: __init__.py  ai_context.py  ai_history.py
services/ai_service/app/redis/: stream.py
services/api_gateway/: Dockerfile  docker-compose.yml  pyproject.toml
services/api_gateway/app/: config.py  main.py
services/api_gateway/app/dependencies/: auth.py
services/api_gateway/app/middlewares/: request_id.py
services/api_gateway/app/routers/: ai.py  auth.py  chat.py  integration.py  user.py  ws.py
services/api_gateway/app/services/: errors.py  http_client.py  http_client_with_context.py  websocket_proxy.py
services/api_gateway/helm/api_gateway/: Chart.yaml  values.yaml
services/api_gateway/helm/api_gateway/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
services/auth_service/: Dockerfile  docker-compose.yml  pyproject.toml
services/auth_service/helm/auth_service/: Chart.yaml  values.yaml
services/auth_service/helm/auth_service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  postgres.yaml  secret.yaml  service.yaml
services/auth_service/src/config/: settings.py
services/auth_service/src/users/: api.py  jwt_utils.py  models.py  schemas.py  telegram_initdata.py  urls.py
services/auth_service/src/users/models/: auth_user.py
services/integration_service/: Dockerfile  docker-compose.yml  pyproject.toml
services/integration_service/app/: main.py
services/integration_service/app/bot/: config.py  keyboards.py
services/integration_service/app/bot/handlers/: callbacks.py  commands.py  messages.py  webapp.py
services/integration_service/app/database/: connection.py  models.py
services/integration_service/app/database/repositories/: ai.py  files.py  integrations.py  notifications.py  settings.py  users.py
services/integration_service/app/messengers/: models.py  publisher.py
services/integration_service/app/messengers/connectors/: tg_bot.py  tg_userbot.py  vk_app.py
services/integration_service/helm/integration_service/: Chart.yaml  values.yaml
services/integration_service/helm/integration_service/templates/: _helpers.tpl  deployment.yaml  postgres.yaml  secret.yaml  service.yaml
services/message_service/: Dockerfile  docker-compose.yml  pyproject.toml
services/message_service/app/: config.py  deps.py  main.py  models.py  schemas.py  socketio_app.py
services/message_service/app/database/: connection.py
services/message_service/app/database/repositories/: conversations.py  messages.py
services/message_service/app/db/: session.py
services/message_service/app/models/: __init__.py  conversation.py  message.py
services/message_service/helm/message_service/: Chart.yaml  values.yaml
services/message_service/helm/message_service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  postgres.yaml  redis.yaml  service.yaml
services/notification_service/: pyproject.toml
services/notification_service/app/: main.py
services/storage_service/: pyproject.toml
services/storage_service/app/: main.py
services/storage_service/app/models/: __init__.py  conversation_cache.py  file_meta.py
services/user_service/: pyproject.toml
services/user_service/src/config/: settings.py
services/user_service/src/profiles/: models.py
services/user_service/src/profiles/models/: connected_account.py  user_profile.py  user_settings.py
src/config/: settings.py
